--- a/App/templates/Matches/MatchAdd.html
+++ b/App/templates/Matches/MatchAdd.html
@@ -45,6 +45,9 @@
 					<div class="form-group  required"><label class="control-label" for="Format">Format</label>
                         <input class="form-control" id="Format" name="Format" required type="text" value="">
                     </div>
+					<div class="form-group"><label class="control-label" for="GameID">GameID</label>
+                        <input class="form-control" id="GameID" name="GameID" required type="text" value="">
+                    </div>
                     <input class="btn btn-default" id="Submit" name="Submit" required type="submit" value="Submit">
 					<input type="hidden" class="form-control" id="Team2" name="Team2" required type="text">
 					<input type="hidden" class="form-control" id="Team1name" name="Team1name" required type="text">
