--- a/App/templates/Matches/Matches.html
+++ b/App/templates/Matches/Matches.html
@@ -80,13 +80,19 @@ h4 {
                       {% endfor %}
                     </td>
                     <td>
-                      <button type="button" class="btn btn-primary" onclick="Decide('{{match.id}}')">Pick Winner<i class="far fa-trash-alt"></i></button>
-                      <form id="Decide{{match.id}}" action="{{ url_for('MatchesBP.matchdecide') }}" method="post">
-                        <input type="hidden" id="id" name="id" value="{{match.id}}">
-                      </form>
-                      <button type="button" class="btn btn-success" onclick="Stats('{{match.id}}')">Get Stats<i class="fas fa-edit"></i></button>
+                      {% if match.decided == 0 %}
+                        <button type="button" class="btn btn-primary" onclick="Decide('{{match.id}}')">Pick Winner<i class="far fa-trash-alt"></i></button>
+                        <form id="Decide{{match.id}}" action="{{ url_for('MatchesBP.matchdecide') }}" method="post">
+                          <input type="hidden" id="id" name="id" value="{{match.id}}">
+                        </form>
+                      {% endif %}
+                      <button type="button" class="btn btn-warning" onclick="Stats('{{match.id}}')">Get Stats<i class="fas fa-edit"></i></button>
                       <form id="Stats{{match.id}}" action="{{ url_for('MatchesBP.matchgetstats') }}" method="post">
                           <input type="hidden" id="id" name="id" value="{{match.id}}">
+                      </form>
+                      <button type="button" class="btn btn-info" onclick="matchStats('{{match.matchstats}}')">Show Stats<i class="fas fa-edit"></i></button>
+                      <form id="matchStats{{match.matchstats}}" action="{{ url_for('RiotAPIBP.MatchStats') }}" method="post">
+                          <input type="hidden" id="id" name="id" value="{{match.matchstats}}">
                       </form>
                       <button type="button" class="btn btn-success" onclick="Edit('{{match.id}}')">Edit<i class="fas fa-edit"></i></button>
                       <form id="Edit{{match.id}}" action="{{ url_for('MatchesBP.matchsave') }}" method="post">
@@ -96,7 +102,6 @@ h4 {
                       <form id="Del{{match.id}}" action="{{ url_for('MatchesBP.matchdel') }}" method="post">
                           <input type="hidden" id="id" name="id" value="{{match.id}}">
                       </form>
-                      
                     </td>
                 </tr>    
             {% endfor %}
@@ -118,6 +123,9 @@ h4 {
     }
     function Stats(id){
       document.getElementById('Stats'+id).submit() 
+    }
+    function matchStats(id){
+      document.getElementById('matchStats'+id).submit() 
     }
   </script>
 {% endblock %}
