--- a/App/templates/Matches/MatchEdit.html
+++ b/App/templates/Matches/MatchEdit.html
@@ -53,6 +53,9 @@
 					<div class="form-group  required"><label class="control-label" for="Format">Format</label>
                         <input class="form-control" id="Format" name="Format" required type="text" value="{{matches.format}}">
                     </div>
+					<div class="form-group"><label class="control-label" for="GameID">GameID</label>
+                        <input class="form-control" id="GameID" name="GameID" required type="text" value="">
+                    </div>
                     <input class="btn btn-default" id="Submit" name="Submit" required type="submit" value="Submit">
 					<input type="hidden" class="form-control" id="Team2" name="Team2" required type="text" value="{{matches.team2}}">
                     <input type="hidden" class="form-control" id="id" name="id" required type value="{{matches.id}}">
