--- a/App/templates/Matches/Matches.html
+++ b/App/templates/Matches/Matches.html
@@ -25,6 +25,8 @@ h4 {
         <li><a class="dropdown-item" href={{url_for('MatchesBP.match')}}?time=month>last month</a></li>
         <li><a class="dropdown-item" href={{url_for('MatchesBP.match')}}?time=all>All</a></li>
       </ul> 
+
+      <input type="text" id="search" placeholder="Search...">
     </div>
   </div>
     <div class="row">
