--- a/App/templates/Tournements/TournementsAdd.html
+++ b/App/templates/Tournements/TournementsAdd.html
@@ -8,7 +8,7 @@
 			</div>
 			<div class="col-6">
 				<h1 class="center">Tournement Add</h1>
-				{{wtf.quick_form(form, action=url_for('TournementBP.submit'))}}
+				{{wtf.quick_form(form, action=url_for('TournementsBP.submit'))}}
 			</div>
 			<div class="col-2">
 			</div>
