--- a/App/templates/Tournements/Tournements.html
+++ b/App/templates/Tournements/Tournements.html
@@ -25,8 +25,8 @@
       <table class="table table-bordered">
         <thead>
           <tr>
-            <th scope="col">Tournement ID</th>
-            <th scope="col">Tournement Name</th>
+            <th scope="col">Tournament ID</th>
+            <th scope="col">Tournament Name</th>
           </tr>
         </thead>
         <tbody>
