--- a/App/templates/Matches/MatchEdit.html
+++ b/App/templates/Matches/MatchEdit.html
@@ -15,7 +15,7 @@
 								<button class="btn btn-secondary dropdown-toggle" type="button" id="TeamButton1" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 									{% for team in teams%}
                                     {%if team.id == matches.team1%}
-                                    {{team.name}} | {{team.abbreviation}} | {{team.description}} 
+                                    {{team.abbreviation}} | {{team.description}} 
                                     {%endif%}
                                     {% endfor%}
 								</a>
@@ -33,7 +33,7 @@
 								<button class="btn btn-secondary dropdown-toggle" type="button" id="TeamButton2" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 									{% for team in teams%}
                                     {%if team.id == matches.team2%}
-                                    {{team.name}} | {{team.abbreviation}} | {{team.description}} 
+                                    {{team.abbreviation}} | {{team.description}} 
                                     {%endif%}
                                     {% endfor%}
 								</a>
@@ -52,9 +52,6 @@
                     </div>
 					<div class="form-group  required"><label class="control-label" for="Format">Format</label>
                         <input class="form-control" id="Format" name="Format" required type="text" value="{{matches.format}}">
-                    </div>
-					<div class="form-group"><label class="control-label" for="GameID">GameID</label>
-                        <input class="form-control" id="GameID" name="GameID" required type="text" value="">
                     </div>
                     <input class="btn btn-default" id="Submit" name="Submit" required type="submit" value="Submit">
 					<input type="hidden" class="form-control" id="Team2" name="Team2" required type="text" value="{{matches.team2}}">
