--- a/App/templates/Base.html
+++ b/App/templates/Base.html
@@ -43,6 +43,7 @@
 							<li><a class="dropdown-item" href={{url_for('main.scheduleoverlay', stream='A')}}>Schedule</a></li>
 							<li><a class="dropdown-item" href={{url_for('main.overlay', stream='A')}}>Overlay</a></li>
 							<li><a class="dropdown-item" href={{url_for('main.stats', stream='A')}}>Stats</a></li>
+							<li><a class="dropdown-item" href={{url_for('main.headtohead', stream='A')}}>Head To Head</a></li>
 						</ul>
 					</div>
 				</li>
@@ -56,6 +57,7 @@
 							<li><a class="dropdown-item" href={{url_for('main.scheduleoverlay', stream='B')}}>Schedule</a></li>
 							<li><a class="dropdown-item" href={{url_for('main.overlay', stream='B')}}>Overlay</a></li>
 							<li><a class="dropdown-item" href={{url_for('main.stats', stream='B')}}>Stats</a></li>
+							<li><a class="dropdown-item" href={{url_for('main.headtohead', stream='B')}}>Head To Head</a></li>
 						</ul>
 					</div>
 				</li>
@@ -87,6 +89,7 @@
         					<li><a class="dropdown-item" href={{url_for('main.castersAPI', stream='A')}}>Casters XML</a></li>
         					<li><a class="dropdown-item" href={{url_for('main.MatchAPI', stream='A')}}>Matches XML</a></li>
         					<li><a class="dropdown-item" href={{url_for('main.statsAPI', stream='A')}}>Stats XML</a></li>
+							<li><a class="dropdown-item" href={{url_for('main.headtoheadxml', stream='A')}}>H2H XML</a></li>
 						</ul>
 					</div>
 				</li>
@@ -101,6 +104,7 @@
         					<li><a class="dropdown-item" href={{url_for('main.castersAPI', stream='B')}}>Casters XML</a></li>
         					<li><a class="dropdown-item" href={{url_for('main.MatchAPI', stream='B')}}>Matches XML</a></li>
         					<li><a class="dropdown-item" href={{url_for('main.statsAPI', stream='B')}}>Stats XML</a></li>
+							<li><a class="dropdown-item" href={{url_for('main.headtoheadxml', stream='B')}}>H2H XML</a></li>
 						</ul>
 					</div>
 				</li>
@@ -123,7 +127,7 @@
 		<br>
 		<h5>Hydrogen By</h5>
         <p>Alexander Martin<br>
-		<a href="n10625194@qut.edu.au">martia25@qut.edu.au</a></p>
+		<a href="martia25@qut.edu.au">martia25@qut.edu.au</a></p>
 		</center>
       </footer>
       
