--- a/App/templates/Tournements/Tournements.html
+++ b/App/templates/Tournements/Tournements.html
@@ -14,52 +14,28 @@
       vertical-align: middle;
     }
   }</style>
-
-
-<!---
-<div class="modal-dialog modal-dialog-centered">
+  <div class="modal-dialog modal-dialog-centered">
     <div class="modal" tabindex="-1" id="Add">
       <div class="modal-dialog">
         <div class="modal-content">
           <div class="modal-header">
-            <h5 class="modal-title">Codes</h5>
+            <h5 class="modal-title">Add Tournament</h5>
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
           </div>
           <div class="modal-body">
-            <table class="table table-bordered">
-              
-              <thead>
-                <tr>
-                  <th scope="col">Tournament Name</th>
-                  <th scope="col">Tournament Code</th>
-                </tr>
-              </thead>
-              {% for Tournement in Tournements %}
-                <tbody>
-                    <tr>
-                    
-                    </tr>
-                    <tr>
-
-                    </tr>
-                </tbody>
-              {% endfor %}
-            </table>
+            {{wtf.quick_form(form, id='AddTournament', action=url_for('TournementsBP.submit'))}}
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-            <button type="button" class="btn btn-primary" onclick="document.getElementById('AddMatch').submit()">Add match</button>
+            <button type="button" class="btn btn-primary" onclick="document.getElementById('AddTournament').submit()">Add match</button>
           </div>
         </div>
       </div>
     </div>
   </div>
--->
-
-
 <div class="container">
     <div>
-        <a type="button" class="btn btn-secondary btn-lg btn-block" href={{url_for('TournementsBP.Tournementsadd')}}><img src="../static/img/plus.svg"></img></a>
+      <a type="button" class="btn btn-secondary btn-lg btn-block" id="AddButton" data-bs-toggle="modal" data-bs-target="#Add"><img src="../static/img/plus.svg"></a>
     </div> 
     <div style="height: 20px;"> </div>
   <div class="row">
@@ -68,7 +44,7 @@
         <thead>
           <tr>
             <th scope="col">Tournament ID</th>
-            <th scope="col">Tournament Name</th>
+            <th scope="col">Tournament Name</th> 
           </tr>
         </thead>
         <tbody>
@@ -94,8 +70,5 @@
   </div>
 </div>
 <script>
-  function Codes(id){
-      document.getElementById('Codes'+id).submit()
-  }
 </script>
 {% endblock %}
