Got Match Stats from TC

--- a/App/templates/Stats/Stats.html
+++ b/App/templates/Stats/Stats.html
@@ -18,7 +18,7 @@
 
 <div class="container">
     <div>
-        <a type="button" class="btn btn-secondary btn-lg btn-block" href={{url_for('MatchesBP.match')}}><img src="../static/img/back.svg"></a>
+        <a type="button" class="btn btn-secondary btn-lg btn-block" href={{url_for('MatchesBP.match')}}?time=hour><img src="../static/img/back.svg"></a>
     </div> 
     <div style="height: 20px;"> </div>
   <div class="row">
