Updated Team Image change

--- a/App/templates/Teams/TeamEdit.html
+++ b/App/templates/Teams/TeamEdit.html
@@ -37,13 +37,13 @@
                         <div class='col-sm'>
                             <img style="width:192px;" src="../static/logos/{{data.logoBlue}}">
                             <div class="form-group  required"><label class="control-label" for="LogoBlue">LogoBlue</label>
-                                <input id="LogoBlue" name="LogoBlue" type="file"accept="image/*"> 
+                                <input id="LogoBlue" name="LogoBlue" type="file"accept="image/*" value="../static/logos/{{data.logoBlue}}"> 
                             </div>
                         </div>
                         <div class='col-sm'>
                             <img style="width:192px;" src="../static/logos/{{data.logoRed}}">
                             <div class="form-group  required"><label class="control-label" for="LogoRed">LogoRed</label>
-                                <input id="LogoRed" name="LogoRed" type="file"accept="image/*"> 
+                                <input id="LogoRed" name="LogoRed" type="file"accept="image/*" value="../static/logos/{{data.logoRed}}"> 
                             </div>
                         </div>
                     </div>
